# resolve-ai

./: .gitignore  README.md  docker-compose.yml  resolve_ai_doc.js
backend/: .env_example  config.py  main.py  pyproject.toml
backend/agents/: __init__.py  approval_agent.py  base_agent.py  conversation_agent.py  decision_agent.py  notification_agent.py  planner_agent.py  register.py  resolve_agent.py  (+1 more)
docs/: ResolveAI.docx  resolve-ai.docx
frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
mcp/: .env_example  config.py  handler.py  loader.py  main.py  pyproject.toml  register.py  server.py
mcp/Helper/: error_helper.py  response_helper.py
mcp/clients/: approval_client.py  base_client.py  conversation_client.py  conversation_message_client.py  document_chunk_client.py  escalation_client.py  knowledge_document_client.py  notification_client.py  ticket_client.py  workflow_execution_client.py  workflow_step_client.py
mcp/models/: handler_model.py  testing_model.py
mcp/tools/: conversation_message_tools.py  conversation_tools.py  document_chunk_tools.py  escalation_tools.py  knowledge_document_tools.py  workflow_execution_tools.py  workflow_step_tools.py
mcp/tools/approvals/: create_approval.py  get_approval.py  model.py  ticket_approval.py  update_approval.py
mcp/tools/notifications/: create_notification.py  get_notification.py  model.py  send_notification.py  update_notification.py  user_notification.py
mcp/tools/test/: testing_tools.py
mcp/tools/tickets/: create_ticket.py  get_ticket.py  model.py  update_ticket.py
(+188 files in other folders)
